# AVEIA

./: AveiaClass.puml  README.md  StartupActivityDiagram.puml  TestAveiaJ16.puml  TestUMLParserAveia.puml  settings.gradle  testXYPad.puml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AveiaSoundSource.h  CMakeLists.txt  Engine.cpp  Engine.h  Synthesizer.h  native-lib.cpp
app/src/main/res/drawable/: correct_border.xml  gradient_colour_silver_horizontal.xml  gradient_colour_silver_horizontal_inverted.xml  gradient_colour_silver_vertical.xml  gradient_dark_border_round.xml  gradient_dark_complete_horizontal.xml  gradient_silver_outline.xml  ic_arrow_forward_foreground.xml  ic_back_button_foreground.xml  ic_baseline_arrow_drop_down_24.xml  ic_baseline_arrow_drop_up_24.xml  ic_baseline_check_circle_24.xml  ic_complete_interval_foreground.xml  ic_correct_circle_foreground.xml  ic_fifth_foreground.xml  ic_flat_fifth_foreground.xml  ic_fourth_foreground.xml  ic_incorrect_circle_foreground.xml  ic_info_foreground.xml  ic_learner_foreground.xml  ic_level_up_foreground.xml  ic_load_preferences_foreground.xml  ic_major_second_foreground.xml  ic_major_seventh_foreground.xml  ic_major_sixth_foreground.xml  ic_major_third_foreground.xml  ic_minor_second_foreground.xml  ic_minor_seventh_foreground.xml  ic_minor_sixth_foreground.xml  ic_minor_third_foreground.xml  ic_octave_foreground.xml  ic_ok_foreground.xml  ic_play_current_foreground.xml  ic_play_next_foreground.xml  ic_play_theremin_foreground.xml  ic_play_xypad_foreground.xml  ic_range_selection_foreground.xml  ic_reset_preferences_foreground.xml  ic_reset_sensor_foreground.xml  ic_save_preferences_foreground.xml  (+8 more)
app/src/main/res/layout/: activity_individual_note_tutorial.xml  activity_instrument_base.xml  activity_navigation.xml  activity_startup.xml  aveia_dialog_layout.xml  aveia_toast_layout.xml  button_change_center_frequency.xml  button_complete_interval_layout.xml  button_instrument_control.xml  button_note_tutorial_layout.xml  button_range_changer_radio.xml  button_select_interval_layout.xml  button_sound_changer_radio.xml  button_tutorial_control.xml  layout_instrument_preferences.xml  layout_learn_music_panel.xml  layout_play_music_panel.xml  layout_settings_tutorial_panel.xml  tutorial_answer_layout.xml
app/src/main/res/mipmap-anydpi-v26/: ic_aveia_final.xml  ic_back_button.xml  ic_complete_interval.xml  ic_fifth_round.xml  ic_ok.xml  (+28 more)
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
